@@ -248,6 +248,9 @@ module Make(U:sig end) =
           let rc = sys_command (Command.string_of_command_spec spec) in
           raise (Exit_silently_with_code rc);
         end
+      else if not (sys_file_exists plugin_file) && !Options.plugin_tags <> [] then
+        eprintf "Warning: option -plugin-tag(s) has no effect \
+                 in absence of plugin file %S" plugin_file
       else
         ()
   end
